--- a/sass/partials/_accordion.scss
+++ b/sass/partials/_accordion.scss
@@ -193,11 +193,7 @@
       cursor: pointer;
       flex-direction: row;
       position: relative;
-      &[aria-expanded="false"]{
-        &:after {
-          content: "\2b";
-        }
-      }
+
       @include sm {
         gap: 8px;
       }
@@ -213,6 +209,11 @@
         font-family: $font-awesome;
         color: $white;
         font-size: 20px;
+      }
+      &.collapsed {
+        &:after {
+          content: "\2b";
+        }
       }
 
       .accordion-title {
